--- a/app.yaml
+++ b/app.yaml
@@ -1,14 +1,52 @@
+# app.yaml
+# Configuração para Google App Engine - Ambiente Flexível
+
+# Define o runtime como Python
 runtime: python
-env: flex # Especifica o ambiente flexível
-entrypoint: gunicorn -b :$PORT app:app # Comando para iniciar o servidor
 
-runtime_config:
-  python_version: 3 # Ou 3.9, 3.8 etc., compatível com sua imagem base implícita
+# Especifica o ambiente Flexível (necessário para Gunicorn, threads de fundo, etc.)
+env: flex
 
-# Configurações opcionais de escalonamento, recursos, etc.
-# manual_scaling:
-#   instances: 1
+# Comando para iniciar a aplicação web usando Gunicorn
+# Gunicorn é um servidor WSGI recomendado para produção em Python.
+# :$PORT é uma variável de ambiente fornecida pelo App Engine que indica a porta
+# na qual sua aplicação deve escutar.
+# app:app refere-se ao objeto 'app' (Flask) dentro do arquivo 'app.py'.
+entrypoint: gunicorn -b :$PORT app:app
+
+# Especifica a versão do Python a ser usada no container.
+# Escolha uma versão suportada pelo App Engine Flex (ex: 3.9, 3.10, 3.11, 3.12).
+# É preferível usar 'runtime_version' em vez do antigo 'runtime_config'.
+runtime_version: '3.10' # Você pode ajustar para 3.9, 3.11, 3.12 conforme necessário
+
+# --- Configurações Opcionais ---
+# Descomente e ajuste conforme necessário para controlar custos e performance.
+
+# Exemplo de escalonamento automático (padrão se não especificado)
+# automatic_scaling:
+#   min_num_instances: 1      # Mínimo de instâncias rodando
+#   max_num_instances: 3      # Máximo de instâncias para escalar
+#   cpu_utilization:
+#     target_utilization: 0.7 # Tenta manter o uso de CPU abaixo de 70%
+
+# Exemplo de recursos por instância
 # resources:
-#   cpu: 1
-#   memory_gb: 0.5
-#   disk_size_gb: 10
+#   cpu: 1                    # Número de vCPUs virtuais
+#   memory_gb: 0.6            # Memória RAM em Gigabytes
+#   disk_size_gb: 10          # Tamanho do disco da instância (temporário)
+
+# Exemplo de verificação de saúde (liveness/readiness checks)
+# liveness_check:
+#   path: "/liveness_check" # Rota na sua app para verificar se está viva
+#   check_interval_sec: 30
+#   timeout_sec: 4
+#   failure_threshold: 2
+#   success_threshold: 2
+#
+# readiness_check:
+#   path: "/readiness_check" # Rota na sua app para verificar se está pronta para receber tráfego
+#   check_interval_sec: 5
+#   timeout_sec: 4
+#   failure_threshold: 2
+#   success_threshold: 2
+#   app_start_timeout_sec: 300
